--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "react-scripts test",
     "lint": "eslint --max-warnings=0 \"src/**/*.{js,jsx}\"",
     "prepare": "husky install",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/return-plus/camping/issues"
   },
-  "homepage": ".",
+  "homepage": "https://return-plus.github.io/camping",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
+    "gh-pages": "^6.1.1",
     "husky": "^8.0.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.14"
